kubernetes/apps/opentelemetry-demo/app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-demo
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
  hostnames:
    - otel-demo.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-proxy
          port: 8080
